# connectedhomeip

./: .gitignore  .gitmodules  README.md
.github/workflows/: build.yaml  chef.yaml  darwin-tests.yaml  examples-ameba.yaml  examples-asr.yaml  examples-bouffalolab.yaml  examples-cc13xx_26xx.yaml  examples-cc32xx.yaml  examples-efr32.yaml  examples-esp32.yaml  examples-infineon.yaml  examples-linux-arm.yaml  examples-linux-imx.yaml  examples-linux-standalone.yaml  examples-linux-tv-casting-app.yaml  examples-nrfconnect.yaml  examples-nuttx.yaml  examples-nxp.yaml  examples-qpg.yaml  examples-stm32.yaml  examples-telink.yaml  examples-tizen.yaml  full-android.yaml  fuzzing-build.yaml  java-tests.yaml  kotlin-style.yaml  qemu.yaml  smoketest-android.yaml  tests.yaml  zap_templates.yaml
examples/lighting-app/efr32/: CMakeLists.txt
examples/platform/mt793x/: matter_shell.cpp
examples/platform/silabs/: BaseApplication.cpp  BaseApplication.h  FreeRTOSConfig.h  MatterShell.cpp
examples/shell/shell_common/: BUILD.gn
examples/shell/standalone/: main.cpp
scripts/examples/: gn_silabs_example.sh
scripts/setup/: requirements.silabs_docker.txt
scripts/setup/linux/: setup_ubuntu_22_04_lts.sh
scripts/tests/: requirements.txt
src/crypto/: CHIPCryptoPAL.cpp
src/include/platform/: NetworkCommissioning.h
src/lib/shell/: Commands.h  Engine.cpp  MainLoopSilabs.cpp
src/lwip/silabs/: lwipopts-rs911x.h  lwipopts-wf200.h
src/platform/silabs/: BLEManagerImpl.h  DiagnosticDataProviderImpl.cpp  Logging.cpp  NetworkCommissioningWiFiDriver.cpp  NetworkCommissioningWiFiDriver.h  (+2 more)
(+86 files in other folders)
